code/k8s-manifests-to-helm-steps/step2/web-sample-otvl.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-sample-otvl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: web-sample-otvl
  replicas: 2
  template:
    metadata:
      name: web-sample-otvl
      labels:
        app.kubernetes.io/name: web-sample-otvl
    spec:
      securityContext:
        # share nginx-unprivileged identity with initContainer git-installer
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: web-sample-otvl
      containers:
        - name: web-server
          image: nginxinc/nginx-unprivileged:latest
          resources:
            requests:
              cpu: 0.25
              memory: 128Mi
            limits:
              cpu: 0.5
              memory: 256Mi
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: workdir
              subPath: code/k8s-manifests-to-helm-steps/html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: workdir
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: web-sample-otvl
spec:
  selector:
    app.kubernetes.io/name: web-sample-otvl
  ports:
      - name: "wev-port"
        port: 8080
        protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-sample-otvl
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - web-sample-otvl.example.com
      secretName: web-sample-otvl
  rules:
    - host: web-sample-otvl.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-sample-otvl
                port:
                  number: 8080
